--- a/templates/helloworld.html
+++ b/templates/helloworld.html
@@ -15,20 +15,28 @@
 
 <body style="background-color: purple">
     <h1 style="color: white;text-align: center;"><span style="color: red">COVID-19</span> WORLDWIDE DATA</h1>
-	
-  
-
     
+     <input type="text" id="currentDate" style="color: black;text-align: center;height: 27px;width:140px" >
+        
+            <script>
+            var today = new Date();
+            var date = today.getFullYear()+'-'+(today.getMonth()+1)+'-'+today.getDate();
+            document.getElementById("currentDate").value = date;
+            </script>
     
      <form style="margin-top: 100px;margin-bottom: 50px" method="post" class="d-flex justify-content-center align-items-center" action="">
         {% csrf_token %}
+        
     <select class ="form-control" style="width: 200px" name="selectedcountry">
+   
     {% for country in mylist %}
     <option>{{country}}</option>
+    
     {% endfor %}
     
     </select>
-    <input type="submit" class="btn btn-danger" name="">
+    <input type="submit" class="btn btn-danger" name="submit">
+    
     </form>
       <h1 style="color:white;text-align: center">{{selectedcountry}}</h1>
    
@@ -65,6 +73,6 @@
          <p style="position: absolute;bottom: 0px;color:grey;text-align: center;">Instructed By <span style="color: white">Kona Pavan Kumar</span></p>
     </div>
    
-
+ 
 </body>
 </html>
